# auto_tourism_management

./: a251101.txt  address_cache_schedule.json  atm_2_save_contacts.py  playwright_state.json  pyproject.toml  readme.doc  test.ipynb  txt_to_vcf.py  vcf_to_xlsx.py  xlsx_full_ad.py  xlsx_to_guest.py  xlsx_to_guide.py
.history/: a251031_20251029222313.txt  a251031_20251029222409.txt  a251031_20251029223123.txt  a251031_20251029225042.txt  a251031_20251029225115.txt  a251031_20251029225508.txt  a251031_20251029225523.vcf  a251101_20251030230743.txt  a251101_20251030230759.txt  a251101_20251030230818.txt  a251101_20251030230932.txt  a251101_20251030231245.txt  a251101_20251030231257.vcf  a251101_20251030231447.vcf  atm_1_extract_tourists_info_20251029202846.py  atm_1_extract_tourists_info_20251029215019.py  atm_1_extract_tourists_info_20251030231649.py  atm_2_save_contacts_20251028224235.py  atm_2_save_contacts_20251029223132.py
.history/downloads/: 2133_20251029205010.py
.history/modules/converters/: TxtToVcfConverter_20251029214417.py
config/: groups.json  guides.json
databases/: hotels.db  pickup_location.db
downloads/: CT_2025-10-31_2025-10-31.xlsx  CT_2025-11-01_2025-11-01.xlsx
modules/address_lookup/: __init__.py  browser.py  config.py  distance.py  geocode.py  text_utils.py
modules/converters/: TxtToVcfConverter.py
modules/crawlers/: BaseCrawler.py  CTCrawler.py  KLKCrawler.py  ViatorCrawler.py  crawler_utils.py
modules/utils/: google_maps_lookup.py  output_utils.py
schedules/: guide_20251028.txt  schedule_RE.txt
(+38 files in other folders)
