[project]
name = "auto-tourist-management"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "db-sqlite3>=0.0.1",
    "ipykernel>=7.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "phonenumbers>=9.0.15",
    "pillow>=11.3.0",
    "playwright>=1.55.0",
    "pypinyin>=0.55.0",
    "pytesseract>=0.3.13",
    "requests>=2.32.5",
    "selenium>=4.36.0",
    "typing>=3.10.0.0",
    "vobject>=0.9.9",
    "webdriver-manager>=4.0.2",
]
